<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChrisPaintApp</string>
    <string name="action_settings">Settings</string>
    <string name="change_color">Change Color</string>
	<string name="color_black">Black</string>
	<string name="color_blue">Blue</string>
	<string name="color_cyan">Light Blue</string>
	<string name="color_dkgray">Dark Gray</string>
	<string name="color_gray">Gray</string>
	<string name="color_green">Green</string>
	<string name="color_ltgray">Light Gray</string>
	<string name="color_magenta">Pink</string>
	<string name="color_red">Red</string>
	<string name="color_yellow">Yellow</string>
	<string name="color_white">White</string>
	
	<string name="change_size">Change Size</string>
	<string name="size_big">Large</string>
	<string name="size_med">Medium</string>
	<string name="size_small">Small</string>
	
</resources>
